roboshop-dev-infra/30-sg-rules/main.tf
# backend load balancer accepting traffic from bastion
resource "aws_security_group_rule" "backend_lb_from_bastion" {
    type = "ingress"
    security_group_id = local.backend_lb_sg_id
    source_security_group_id = data.aws_ssm_parameter.bastion_sg_id.value
    from_port =80
    protocol = "tcp"
    to_port = 80
}
# bastion allowing from laptop to access backend load balancer
resource "aws_security_group_rule" "bastion_from_laptop" {
    type = "ingress"
    security_group_id = data.aws_ssm_parameter.bastion_sg_id.value
    cidr_blocks = ["0.0.0.0/0"]
    from_port = 22
    protocol = "tcp"
    to_port = 22
}
